--- a/style.css
+++ b/style.css
@@ -27,3 +27,16 @@ td {
 td{
   padding: 15px;
 }
+.footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  color: #f5f5f5;
+  background-color: black;
+  padding: 10px;
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+}
