--- a/Day1/style.css
+++ b/Day1/style.css
@@ -8,11 +8,11 @@ h1 {
   font-family: "Bakbak One", cursive;
   color: #f5f5f5;
   text-align: center;
-  font-size: 5vw;
+  font-size: 5vh;
 }
 
 .tictactoe {
-  margin: auto;
+  margin: 7vh auto auto auto;
   width: fit-content;
   word-spacing: 0;
   line-height: 0;
