--- a/style.css
+++ b/style.css
@@ -6,27 +6,27 @@ body {
 h1 {
   color: #30475e;
   font-family: "Bakbak One", cursive;
-  font-size: 100px;
+  font-size: 5vh;
   text-align: center;
 }
 
 table {
-  font-size: 50px;
+  font-size: 3vh;
   font-family: "Open Sans", sans-serif;
   margin: auto;
   width: 60%;
   text-align: center;
   border-collapse: collapse;
-  
 }
 
 table,
 td {
-  border: 5px solid black;
+  border: 1vh solid black;
 }
-td{
-  padding: 15px;
+td {
+  padding: 1vh;
 }
+
 .footer {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -36,7 +36,7 @@ td{
   background-color: black;
   padding: 10px;
   position: fixed;
-  left: 0px;
-  bottom: 0px;
+  left: 0;
+  bottom: 0;
   width: 100%;
 }
