--- a/style.css
+++ b/style.css
@@ -29,14 +29,15 @@ td {
 
 .footer {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   text-align: center;
   font-family: "Open Sans", sans-serif;
   color: #f5f5f5;
   background-color: black;
   padding: 10px;
+  font-size: min(2vw, 15px);
   position: fixed;
-  left: 0;
-  bottom: 0;
+  left: 0px;
+  bottom: 0px;
   width: 100%;
 }
