--- a/Day8/style.css
+++ b/Day8/style.css
@@ -12,7 +12,7 @@ textarea {
 .textbox {
   display: flex;
   justify-content: center;
-  margin: 40px 15px;
+  margin: 40px 15px 15px;
 }
 
 body {
@@ -24,7 +24,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   padding: 15px;
-  margin: 50px auto;
+  margin: 15px auto;
 }
 
 button {
@@ -66,7 +66,8 @@ button:hover {
   background-color: black;
   padding: 10px 0px;
   font-size: min(2vw, 15px);
+  position: fixed;
   left: 0px;
   bottom: 0px;
-  max-width: 100%;
+  width: 100%;
 }
