--- a/Day28/style.css
+++ b/Day28/style.css
@@ -22,6 +22,7 @@ body {
 
 .timer {
   width: min(400px, 50vw);
+  min-width: 180px;
   height: 200px;
   background: #feece9;
   padding: 20px;
@@ -103,4 +104,10 @@ body {
   left: 0px;
   bottom: 0px;
   width: 100%;
+}
+
+@media only screen and (max-width: 350px) {
+  .btn-rect-to-round {
+    width: 70px;
+  }
 }
