--- a/Day28/style.css
+++ b/Day28/style.css
@@ -1,94 +1,149 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&family=Poppins:wght@400;500;600;700&display=swap");
 
+:root {
+  --bgcolor: #333333;
+}
+
 * {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
 
+html,
+body {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
+  padding-bottom: 25px;
+  background-color: #ccd1e4;
   min-height: 100vh;
-  background: #2f3a8f;
+  position: relative;
 }
 
 .container {
   margin-top: 45px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-content: center;
+}
+
+#settings {
+  margin: 25px auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   text-align: center;
-  row-gap: 35px;
+  gap: 15px;
 }
 
-.timer {
-  width: min(400px, 50vw);
-  min-width: 180px;
-  height: 200px;
-  background: #feece9;
-  padding: 20px;
-  border-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  font-size: 4rem;
-}
-
-.left-btns,
-.right-btns {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.control {
-  width: 20px;
-  font-size: 25px;
-  display: flex;
-  justify-content: center;
-  background: transparent;
-  outline: none;
-  border: none;
-  cursor: pointer;
-}
-
-.start-stop {
+#settings span {
   grid-column: 1/-1;
+}
+
+button {
+  height: 35px;
+  width: 35px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+#blue {
+  background-color: rgba(0, 140, 255, 0.774);
+}
+
+#red {
+  background-color: rgba(255, 0, 0, 0.719);
+}
+
+#green {
+  background-color: rgba(0, 128, 0, 0.795);
+}
+
+#small {
+  width: 15px;
+  height: 15px;
+  transform: translate(-50%, -50%);
+}
+
+#medium {
+  width: 20px;
+  height: 20px;
+  transform: translate(-50%, -50%);
+}
+
+#large {
+  width: 30px;
+  height: 30px;
+  transform: translate(-50%, -50%);
+}
+
+#X-large {
+  width: 45px;
+  height: 45px;
+  transform: translate(-50%, -50%);
+}
+
+#paint {
+  border: 1px solid black;
+  background: var(--bgcolor);
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border-radius: 3px;
+  width: 800px;
+  height: 500px;
+}
+
+.sketch {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: auto;
-  text-align: center;
-  gap: 30px;
+  margin-bottom: 25px;
 }
-.btn {
-  font-family: Arial, Helvetica, sans-serif;
-  text-transform: uppercase;
+
+@media only screen and (max-width: 1400px) {
+  #paint {
+    width: 320px;
+    height: 320px;
+  }
 }
-.btn:hover .btn-slide-show-text1 {
-  margin-left: 65px;
+
+@media only screen and (max-width: 750px) {
+  #paint {
+    width: 320px;
+    height: 320px;
+  }
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  #settings {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #small,
+  #medium,
+  #large,
+  #X-large {
+    transform: none;
+  }
 }
-.btn-rect-to-round {
-  height: 55px;
-  width: 150px;
-  font-size: 16px;
-  font-weight: 600;
-  background: #feece9;
-  cursor: pointer;
-  transition: all 0.5s ease-in 0s;
-}
-.btn-rect-to-round:hover {
-  border-radius: 60px;
-  color: rgb(255, 255, 255) !important;
-}
-.btn-rect-to-round--black {
-  border: 2px solid rgb(51, 51, 51);
-  color: rgb(51, 51, 51) !important;
-}
-.btn-rect-to-round--black:hover {
-  border-color: rgb(51, 51, 51);
-  background: rgb(51, 51, 51);
+
+@media only screen and (max-height: 500px) {
+  #paint {
+    width: 320px;
+    height: 320px;
+  }
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .footer {
@@ -104,10 +159,4 @@ body {
   left: 0px;
   bottom: 0px;
   width: 100%;
-}
-
-@media only screen and (max-width: 350px) {
-  .btn-rect-to-round {
-    width: 70px;
-  }
 }
